Subiendo mi html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Github page</title>
 </head>
 <body>
-   <h1> Fue creado gracias al curso de pltazi</h1> 
+   <h1> Fue creado gracias al curso de platzi</h1> 
    <p><img src="https://i.imgur.com/eq2cU.jpg" alt=""></p>
 </body>
 </html>
